   the subset of data that is given by an 'sge_accounting_index_by_week'
   week index table.  This is one by passing to to argument 'offset'.

 * Now read_raw_sge_accounting() and read_sge_accounting() accepts also
   file connections as input.

 * Add sge_failed_codes().

DOCUMENTATION:

 * Updated SGE accounting vignette.

 * Updated example data for number of users over time.
 
BUG FIXES:

 * Field 'nbr_of_jobs' returned by sge_make_week_index() was a cumulative
   sum, not number of jobs per week.

 * open_file_at(..., auto_close = TRUE) was not safe; it could end up closing
   the incorrect connection if the intended one had been closed and another
   one had been opened.  Dropped options for 'auto_close' to be on safe side.

Version: 0.2.0 [2021-06-18]

NEW FEATURES:

 * Add sge_make_week_index().

 * Add add_weeks().
 

Version: 0.1.0 [2021-06-18]

NEW FEATURES:

 * Add users_over_time().
 
 * Add generic function anonymize() with implementations for 'data.frame',
   'raw_sge_accounting', and 'qstat' objects.

 * Add read_qstat() for getting information on the jobs currently on the
   SGE queue.

 * Add make_file_index(), save_file_index(), and read_file_index().

 * Add open_file_at().

 * read_raw_sge_accounting(), and therefore also read_sge_accounting(),
   gained argument 'offset'.

DOCUMENTATION:

 * Add vignettes 'SGE Accounting File' and 'Jobs on the SGE queue'.

BUG FIXES:

 * The 'ru_wallclock' values returned by read_sge_account() were corrupted
   by "random" NAs.


Version: 0.0.0-9005 [2021-05-05]

NEW FEATURES:

 * Add write_raw_sge_accounting().

 * Add anonymize_raw_sge_accounting().

 * Now read_raw_sge_accounting() records file header in attribute 'header'.

 * Added an example SGE 'accounting' file and examples how to process it.


Version: 0.0.0-9004 [2021-01-25]

NEW FEATURES:

 * Add job_summary_by_status().
 

Version: 0.0.0-9003 [2020-04-04]

NEW FEATURES:

 * Add parse_category() for 'sge_accounting' objects.
 
DOCUMENTATION:
