@@ -1,5 +1,5 @@
 Package: wyntonquery
-Version: 0.2.0-9006
+Version: 0.2.0-9007
 Depends:
     R (>= 3.5.0)
 Imports:
